--- a/3-contagem-regressiva.html
+++ b/3-contagem-regressiva.html
@@ -57,7 +57,7 @@
         //settimeout executa uma função a cada x milesegundos
 
 
-        var tempo = setInterval(() => {
+        const tempo = setInterval(() => {
             
             if(numlimite < 0){
                 clearInterval(tempo)
