--- a/7-manipulacao-de-arrays.html
+++ b/7-manipulacao-de-arrays.html
@@ -87,12 +87,17 @@
 
             //Somente enquanto contador for menor que totalJogadores
             if(contador <= totalJogadores){
-                document.getElementById('saida').innerHTML += `${nomeDigitado},&nbsp;`
+                document.getElementById('saida').innerText += `\n ${nomeDigitado}`
                 document.getElementById('nome').value = ''
                 //preenche a array jogadores
                 jogadores.push(nomeDigitado)       
             }else{
-                
+                //sorteia um jogador
+                let sorteio = Math.round(Math.random()*totalJogadores )
+                if(sorteio > 3){
+                    return
+                }
+                document.getElementById('sorteado').innerText =`O JOGADOR SORTEADO FOI ${jogadores[sorteio]}`
             }
                         
             contador ++
